--- a/Smart Proxy X/src/main/res/values/colors.xml
+++ b/Smart Proxy X/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="red">#e29487</color>
     <color name="text_6">#666666</color>
     <color name="divider">#cccccc</color>
+    <color name="bg">#f9f9eb</color>
 </resources>
