--- a/OneKeyAndroid/src/main/res/layout/activity_main.xml
+++ b/OneKeyAndroid/src/main/res/layout/activity_main.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/white">
+    android:background="@color/gray_bg">
 
     <LinearLayout
         android:id="@+id/setting_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/bg"
+        android:background="@color/white"
         android:orientation="vertical">
 
 
@@ -93,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_vertical_margin"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/proxy_app"
@@ -145,6 +145,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/proxy_switch"
+        android:background="@color/white"
         android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
